password encryption completed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <P>Making user panel with proper authentication</P>
     <button><a href="Signup.html">Sign Up</a></button>
     <button><a href="login.html">Log In</a></button>
+    <button onclick="bcrypt();">show</button>
     <script src="main.js">
     </script>
+
 </body>
 </html>
