--- a/userData/user1/accountsetting.html
+++ b/userData/user1/accountsetting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="jewel.css">
+    <link rel="stylesheet" href="../../jewel.css">
     <title>Edit your account information</title>
 </head>
 <body>
@@ -19,6 +19,7 @@
         <input type="checkbox" name="checkbox" id="checkbox"><br>
         <input type="button"  value="Update"  onclick="registration(this.form);">
     </form>
-    <script src="main.js"></script>
+    <script>document.getElementById('firstname').value=localStorage.firstname1</script>
+    <script src="../../main.js"></script>
 </body>
 </html>
