--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="jewel.css">
+    <script src="crypto-js.js"></script>
 
     <title>To-do list login panel</title>
 </head>
@@ -12,11 +13,10 @@
     <div id="successMessage"></div>
     <h1>User login panel</h1>
     <form>
-        Email Address <input type="text" name="email" id="loginemail" placeholder="Enter your E-mail Address" value="">
-        User Passwrod <input type="password" name="password" placeholder="Enter your password" id="loginpassword" value="">
+        Email Address <input type="text" name="email" id="loginemail" placeholder="Enter your E-mail Address" value=""> <br><br>
+        User Passwrod <input type="password" name="password" placeholder="Enter your Password" id="loginpassword" value=""> <br>
         <input type="submit"  onclick="userlogin(this.form);">
     </form>
-
     <script src="main.js"></script>
 </body>
 </html>
