--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="jewel.css">
+    <!--The below script is for password encryption-->
+    <script src="crypto-js.js"></script>
+
     <title>to-do list registration</title>
 </head>
 <body>
@@ -20,5 +23,6 @@
         <input type="button"  value="registration"  onclick="registration(this.form);">
     </form>
     <script src="main.js"></script>
+
 </body>
 </html>
