--- a/userData/user1/update.html
+++ b/userData/user1/update.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="jewel.css">
+    <link rel="stylesheet" href="../../jewel.css">
     <title>Update the existing to do list</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <input type="text" name="listdata" id="list" value="" placeholder="Enter your to do list value">
         <button type="button" onclick="todoList(this.form);">Save the list</button>
     </form>
-    <script src="main.js"></script>
+    <script src="../../main.js"></script>
     
 </body>
 </html>
